got the apis data fpr coin description

--- a/src/app/coin-details/coin-details.component.html
+++ b/src/app/coin-details/coin-details.component.html
@@ -1,1 +1,26 @@
-sdf
+<div class="cointainer-fluid  ">
+
+<div class="row">
+ 
+    <div class="col-md-3 details">
+
+        <div class="img ">
+
+            <img [src]="coinData?.image?.large " alt="">
+            <h3 class="text-center " style="font-size: 29px;"  > {{coinData?.name}} </h3>
+            <h2 [innerHTML]="coinData?.description?.en.split( '. ')[0]"></h2>
+            <div class="more-details">  <span class="title" >Rank: </span> <span class="Value" >{{coinData?.market_cap_rank}}</span><br> <br>
+             <span class="title" >Curent Price:  </span> <span class="Value" >{{coinData?.market_data.current_price.usd | currency }}</span> <br> <br>
+             <span class="title" >MarketCap: </span> <span class="Value" >{{coinData?.market_data.market_cap.usd | currency}}</span> 
+           
+            
+            </div>
+
+
+        </div>
+         
+    </div> 
+     
+</div>
+
+</div>
