--- a/src/app/coin-details/coin-details.component.scss
+++ b/src/app/coin-details/coin-details.component.scss
@@ -5,6 +5,7 @@
     align-items: center;
     border-right: 2px solid grey;
     flex-direction: column;
+    margin-left: 30px;
     h3 {
         font-weight: bold;
         margin-bottom: 20px;
