--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
   <mat-toolbar>
-    <span>Nero</span>
+
+  <img src="../assets/nero-low-resolution-logo-color-on-transparent-background.png"  width="50px" alt="NeroImag">
+    
     <span class="example-spacer"></span>
     <mat-form-field > 
 <mat-select  (valueChange)="sendCurrency($event) " class="text-sm " [(ngModel)]="SelectedCurrency" >
@@ -14,5 +16,8 @@
     </mat-form-field>
   </mat-toolbar>
 
+
+
+  
 
 <router-outlet></router-outlet>
