--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -93,3 +93,25 @@
   
   
 </div>
+
+
+
+
+
+
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-12 text-center text-md-start mb-3 mb-md-0">
+        <p class="copyright-text">
+          Copyright &copy; 2023 All Rights Reserved by Nero
+        </p>
+      </div>
+      <div class="col-md-6 col-12 text-center text-md-end">
+        <button class="btn btn-transparent d-block d-md-inline-block mb-2 mb-md-0 mr-md-2"><i class="lab la-google-play"></i> Download The App</button>
+        <button class="btn btn-dark d-block d-md-inline-block"><i class="lab la-apple"></i> Get On PlayStore</button>
+      </div>
+    </div>
+  </div>
+</footer>
+
