--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -75,3 +75,15 @@ table {
 :host ::ng-deep tr.mat-row {
     height: 70px;
 }
+
+.footer{
+
+    margin-top: 20px;
+    
+}
+
+.btn{
+
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
