--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -87,3 +87,13 @@ table {
     margin-left: 20px;
     margin-bottom: 20px;
 }
+
+.la-apple{
+    color: #555555;
+    font-size: 20px;
+}
+
+.la-google-play{
+    color: #009688;
+    font-size: 20px;
+}
