changed paginator colo

--- a/src/app/coin-details/coin-details.component.html
+++ b/src/app/coin-details/coin-details.component.html
@@ -24,3 +24,20 @@
 </div>
 
 </div>
+
+<footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-12 text-center text-md-start mb-3 mb-md-0">
+          <p class="copyright-text">
+            Copyright &copy; 2023 All Rights Reserved by Nero
+          </p>
+        </div>
+        <div class="col-md-6 col-12 text-center text-md-end">
+        <button class="btn btn-transparent d-block d-md-inline-block"><i class="lab la-google-play"></i>Get On PlayStore</button>
+      
+          <button class="btn btn-dark d-block d-md-inline-block"><i class="lab la-apple"></i> Get On PlayStore</button>
+        </div>
+      </div>
+    </div>
+  </footer>
