--- a/src/app/coin-details/coin-details.component.scss
+++ b/src/app/coin-details/coin-details.component.scss
@@ -61,6 +61,27 @@
     border: 1px solid #009688;
 }
 
-* {
-    color: #030202;
+
+
+
+.footer{
+
+    margin-top: 20px;
+    
+}
+
+.btn{
+
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+.la-apple{
+    color: #555555;
+    font-size: 20px;
+}
+
+.la-google-play{
+    color: #009688;
+    font-size: 20px;
 }
