--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -65,7 +65,7 @@ table {
 }
 
 :host ::ng-deep .mat-paginator-outer-container {
-    background-color:   rgb(81, 230, 230);
+    background-color: #009688;
 }
 
 :host ::ng-deep tr.mat-header-row {
