--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <mat-form-field > 
 <mat-select  (valueChange)="sendCurrency($event) " class="text-sm " [(ngModel)]="SelectedCurrency" >
 
-  <mat-option selected value="INR" >INR</mat-option>
+  <mat-option selected value="INR" >Zar</mat-option>
 
   <mat-option selected value="USD" >USD</mat-option>
 
