--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 
   <mat-toolbar>
 
-  <img src="../assets/nero-low-resolution-logo-color-on-transparent-background.png"  width="50px" alt="NeroImag">
+  <img  class="img" src="../assets/nero-low-resolution-logo-color-on-transparent-background.png"  width="50px" alt="NeroImag">
     
     <span class="example-spacer"></span>
     <mat-form-field > 
 <mat-select  (valueChange)="sendCurrency($event) " class="text-sm " [(ngModel)]="SelectedCurrency" >
 
-  <mat-option selected value="INR" >Zar</mat-option>
+  <mat-option selected value="Zar" >Zar</mat-option>
 
   <mat-option selected value="USD" >USD</mat-option>
 
