updated the logo size and nav margins

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,18 @@
 .example-spacer {
     flex: 1 1 auto;
+
   }
   
   .img{
-    margin-left: 150px;
+    margin-left: 170px;
+    margin-top: 60px;
+  }
+
+
+  .mat-toolbar {
+background-color: rgb(255, 253, 253);
+  }
+
+  .mat-select{
+margin-top: 60px;
   }
