--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -1,5 +1,5 @@
 .header{
-
+margin-top: 45px;
     height: 40%;
     display: flex ;
     flex-direction: column;
@@ -27,6 +27,7 @@
 background-image: url(../../assets/banner2.jpeg);
 height: 400px;
 width: 100%;
+margin-top: 80px;
 }
 
 .sub-header{
