--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-  <mat-toolbar>
+  <mat-toolbar  >
 
-  <img  class="img" src="../assets/nero-low-resolution-logo-color-on-transparent-background.png"  width="50px" margin-bottom="400px"  alt="NeroImag">
+  <img  class="img" src="../assets/nero-low-resolution-logo-color-on-transparent-background.png"  width="90px" alt="NeroImag">
     
     <span class="example-spacer"></span>
     <mat-form-field > 
