--- a/src/app/coin-details/coin-details.component.scss
+++ b/src/app/coin-details/coin-details.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     margin-top: 25px;
     align-items: center;
-    border-right: 2px solid grey;
+    border-right: 2px solid rgb(233, 228, 228);
     flex-direction: column;
     margin-left: 30px;
     h3 {
@@ -84,4 +84,8 @@
 .la-google-play{
     color: #009688;
     font-size: 20px;
+}
+
+.row{
+    margin-top: 80px;
 }
