--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -46,7 +46,7 @@
 <table></table>
 <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Nero Token " #input>
   </mat-form-field>
   
   <div class="mat-elevation-z8">
