--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,3 +16,18 @@ background-color: rgb(255, 253, 253);
   .mat-select{
 margin-top: 60px;
   }
+
+
+/* Mobile Styles */
+@media screen and (max-width: 767px) {
+  .img {
+    margin-left: 10px; 
+    margin-top: 40px; 
+    width: 50px;
+  }
+
+  .mat-select {
+    margin-top: 40px; 
+
+  }
+}
