--- a/src/app/coin-details/coin-details.component.scss
+++ b/src/app/coin-details/coin-details.component.scss
@@ -127,7 +127,7 @@
     font-size: 18px;
     border: 1px solid #fff;
     width: 100%; /* Adjusted width for smaller screens */
-    margin-top: 10px; /* Added margin for spacing */
+    margin-top: 10px;
 }
 
 .btn-custom:focus {
